force-app/main/default/objects/b3o__Document_Submission__c/b3o__Document_Submission__c.object-meta.xml
<CustomObject>
    <label>Document Submission</label>
    <nameField>
        <displayFormat>DOC-SUB-{0}</displayFormat>
        <label>Document Submission</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>