force-app/main/default/objects/b3o__Document_Submission__c/fields/b3o__Document__c.field-meta.xml
<CustomField>
    <fullName>b3o__Document__c</fullName>
    <label>Document</label>
    <referenceTo>b3o__Document__c</referenceTo>
    <relationshipLabel>Document Submissions</relationshipLabel>
    <relationshipName>Document_Submissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>