force-app/main/default/objects/b3o__Document_Submission__c/fields/b3o__Document_Assignment__c.field-meta.xml
<CustomField>
    <fullName>b3o__Document_Assignment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Document Assignment</label>
    <referenceTo>b3o__Document_Assignment__c</referenceTo>
    <relationshipLabel>Document Submissions</relationshipLabel>
    <relationshipName>Document_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>