force-app/main/default/objects/b3o__Document_Submission__c/fields/b3o__Document_Pack__c.field-meta.xml
<CustomField>
    <fullName>b3o__Document_Pack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Pack</label>
    <referenceTo>b3o__Document_Pack__c</referenceTo>
    <relationshipLabel>Document Submissions</relationshipLabel>
    <relationshipName>Document_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>