force-app/main/default/objects/b3o__Document_Submission__c/fields/b3o__Expiring_In_Days__c.field-meta.xml
<CustomField>
    <fullName>b3o__Expiring_In_Days__c</fullName>
    <formula>b3o__Valid_Until__c - today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiring In (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>