force-app/main/default/objects/b3o__Document_Submission__c/fields/b3o__Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>b3o__Is_Expired__c</fullName>
    <formula>NOT(ISNULL(b3o__Valid_Until__c)) &amp;&amp; b3o__Valid_Until__c &lt; today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>