force-app/main/default/objects/b3o__Document_Submission__c/fields/b3o__Is_Expiring_Soon__c.field-meta.xml
<CustomField>
    <fullName>b3o__Is_Expiring_Soon__c</fullName>
    <formula>NOT(ISNULL( b3o__Valid_Until__c )) &amp;&amp;  NOT(ISNULL(b3o__Document__r.b3o__Expiring_Soon_Warning_Days__c )) &amp;&amp;
 b3o__Expiring_In_Days__c &gt;= 0 &amp;&amp; b3o__Expiring_In_Days__c &lt;= b3o__Document__r.b3o__Expiring_Soon_Warning_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expiring Soon</label>
    <type>Checkbox</type>
</CustomField>