force-app/main/default/objects/b3o__Document_Submission__c/fields/b3o__Public_Comments__c.field-meta.xml
<CustomField>
    <fullName>b3o__Public_Comments__c</fullName>
    <label>Public Comments</label>
    <type>TextArea</type>
</CustomField>