force-app/main/default/objects/b3o__Document_Submission__c/fields/b3o__Requested_Update_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>b3o__Requested_Update_Timestamp__c</fullName>
    <label>Requested Update Timestamp</label>
    <type>DateTime</type>
</CustomField>