force-app/main/default/objects/b3o__Document_Submission__c/fields/b3o__Status__c.field-meta.xml
<CustomField>
    <fullName>b3o__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
                <default>true</default>
                <label>Pending Review</label>
            </value>
            <value>
                <fullName>Request Update</fullName>
            </value>
            <value>
                <fullName>Unknown Status</fullName>
                <isActive>false</isActive>
                <label>Unknown Status</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>