force-app/main/default/objects/b3o__Document_Submission__c/fields/b3o__Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>b3o__Valid_Until__c</fullName>
    <label>Valid Until</label>
    <type>Date</type>
</CustomField>